ref: Coercions#URLConvertor